--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -69,6 +69,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Download Build Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: hugo-site
+          path: ./public
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          publish_dir: ./public
