--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Download Build Artifacts
         uses: actions/download-artifact@v2
         with:
-          name: hugo-site
+          name: github-pages
           path: ./public
       - name: Deploy to GitHub Pages
         id: deployment
